[BSD] Primary thread's stack size is reported incorrectly

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • None
    • b22
    • x86
    • os_x

      At least on Mac OS 10.12 we have observed stack sizes of the primary thread not aligned to pages boundries. This can be provoked by e.g. setrlimit() (ulimit -s xxxx in the shell).This voids the computation of the addresses of the guard pages.

      Fix:
      Apparently Mac OS actually rounds upwards to next multiple of page size however, it is conservative to round downwards here to be on the safe side.

            Assignee:
            Gunter Haug
            Reporter:
            Gunter Haug
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: