8186286: [BSD] Primary thread's stack size is reported incorrectly

Reviewed-by: shade, stuefe